<resources>
    <string name="app_name">SANAPruebaDos</string>
    <string name="tab_text_1">Login</string>
    <string name="tab_text_2">Registrarse</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_mi_inicio">miInicio</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings1">Idioma</string>
    <string name="action_settings2">Salir</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="title_adiccion_list">adicciones</string>
    <string name="title_adiccion_detail">Adiccion Detail</string>
    <string name="title_centro_list">centros</string>
    <string name="title_centro_detail">centro Detail</string>
    <string name="title_establecimiento_list">Establecimientos</string>
    <string name="title_establecimiento_detail">Establecimiento Detail</string>

    <!-- hint formulario-->
    <string name="hintUsuario">Usuario</string>
    <string name="hintNombre">Nombre</string>
    <string name="hintApellido">Apellido</string>
    <string name="hintContraseña">Contraseña</string>
    <string name="hintCorreo">Correo</string>
    <!-- hint formulario Errores-->
    <string name="ErrorUsuario">Ingrese Usuario </string>
    <string name="ErrorNombre">Ingrese Nombre</string>
    <string name="ErrorApellido">Ingrese Apellido</string>
    <string name="ErrorContraseña">Ingrese Contraseña</string>
    <string name="ErrorCorreo">Ingrese Correo</string>
    <string name="title_momento_list">Momentos</string>
    <string name="title_momento_detail">Momento Detail</string>
    <string name="title_activity_maps_momentos">Map</string>
    <string name="seleccionar_imagen">Seleccionar Imagen</string>
    <string name="guardar">Guardar</string>
    <string name="button">Button</string>
    <string name="salir">Salir</string>
    <string name="adicciones">Adicciones</string>
    <string name="establecimientos">Establecimientos</string>
    <string name="editar_estado">Editar Estado</string>
    <string name="guardar">Guardar</string>
    <string name="contenido_onjeto">CONTENIDO ONJETO</string>
    <string name="nombre">Nombre</string>
    <string name="cambiar">Cambiar</string>
    <string name="agregar">Agregar</string>
    <string name="espacios">espacios</string>
    <string name="momentos">Momentos</string>
    <string name="inicio">Inicio</string>
    <string name="registrarse">Registrarse</string>
    <string name="registro">Registro</string>
    <string name="direccion">DIRECCION</string>
    <string name="mapa">Mapa</string>


</resources>
