<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.home.HomeFragment">


    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:foregroundGravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BTMoment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="60dp" />

            <Button
                android:id="@+id/b_adiccion"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#15F1CC"
                android:drawableBottom="@drawable/ic_adiccion"
                android:elegantTextHeight="false"
                android:text="@string/adicciones"
                android:textAlignment="gravity"
                android:textColor="?attr/colorPrimaryDark"
                android:textSize="24sp" />

            <Button
                android:id="@+id/b_espacio"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#FFFFFF"
                android:drawableTop="@drawable/ic_espacios"
                android:elegantTextHeight="false"
                android:text="@string/espacios"
                android:textColor="?attr/colorPrimaryDark"
                android:textSize="24sp" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/BTMoment"
        android:layout_width="153dp"
        android:layout_height="53dp"
        android:layout_margin="23dp"
        android:background="@drawable/ovalo"
        android:text="@string/momentos"
        app:layout_constraintEnd_toEndOf="@+id/text_home"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/text_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:textAlignment="center"
        android:textSize="0sp" />


</androidx.constraintlayout.widget.ConstraintLayout>



